[metadata]
name = reolinkapi
version = attr: reolinkapi.__version__
description = Reolink camera api for python
long_description = file: README.md
keywords = Reolink
license = MIT
classifiers =
    Development Status :: 5 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires = 
    typing_extensions
    backports.strenum

[options.packages.find]
where=src

[options.package_data]


[tool:pytest]
env_files =
    .env
    .tests.env