[metadata]
name = async_reolink.api
version = attr: async_reolink.api.__version__.__version__
description = Async ReoLink camera API framework for python
long_description = file: README.md
keywords = ReoLink, async, api
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
project_urls =
    source=https://github.com/xannor/py_reolinkapi
    tracker=https://github.com/xannor/py_reolinkapi/issues

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find_namespace:
install_requires = 
    typing_extensions

[options.packages.find]
where=src

[options.package_data]


[tool:pytest]
env_files =
    .env
    .tests.env